--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -21,7 +21,7 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY package*.json ./
-COPY .env ./
+# COPY .env ./
 RUN npm install
 COPY . .
 RUN npm run build
