docker backend chnage

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -18,44 +18,44 @@
 
 
 
-FROM node:18-alpine
-WORKDIR /app
-COPY package*.json ./
-# COPY .env ./
-RUN npm install
-COPY . .
-RUN npm run build
-
-# Install a static file server (e.g., 'serve')
-RUN npm install -g serve
-
-EXPOSE 5173
-CMD ["serve", "-s", "dist", "-l", "5173"]
-
-
-
-# # Stage 1: Build
-# FROM node:18-alpine AS builder
+# FROM node:18-alpine
 # WORKDIR /app
 # COPY package*.json ./
-# RUN npm install --frozen-lockfile
+# # COPY .env ./
+# RUN npm install
 # COPY . .
 # RUN npm run build
 
-# # Stage 2: Production Serve
-# FROM node:18-alpine
-# WORKDIR /app
-# COPY --from=builder /app/dist ./dist
-# COPY --from=builder /app/package*.json ./
-
-# # Install production dependencies ONLY
-# RUN npm install --omit=dev
-
-# # Install serve globally (or use local node_modules version)
+# # Install a static file server (e.g., 'serve')
 # RUN npm install -g serve
 
 # EXPOSE 5173
 # CMD ["serve", "-s", "dist", "-l", "5173"]
+
+
+
+# Stage 1: Build
+FROM node:18-alpine AS builder
+WORKDIR /app
+COPY package*.json ./
+RUN npm install --frozen-lockfile
+COPY . .
+RUN npm run build
+
+# Stage 2: Production Serve
+FROM node:18-alpine
+WORKDIR /app
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/package*.json ./
+
+# Install production dependencies ONLY
+RUN npm install --omit=dev
+
+# Install serve globally (or use local node_modules version)
+RUN npm install -g serve
+
+EXPOSE 5173
+CMD ["serve", "-s", "dist", "-l", "5173"]
 
 
 
